<resources>
    <string name="app_name">Yummy Food</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Login / Registration</string>
    <string name="phone">Mobile Number</string>
    <string name="food_item">Food Item</string>
    <string name="your_order">Your Order</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="root_fragment">ROOT_FRAGMENT_TAG</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">Food Item</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="order">Your Order</string>
    <string name="contact">Contact Us</string>
    <string name="jnufood">JnUFood</string>
    <string name="all_rights_are_reserved">All rights are reserved</string>
    <string name="todo">TODO</string>
    <string name="find_job">Find Job</string>
    <string name="administraion">Administraion</string>
    <string name="my_account">My Account</string>
    <string name="log_out">Log out</string>
    <string name="my_order">My Order</string>

</resources>