<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"

            android:title="@string/menu_login"

            />
        <item
            android:id="@+id/my_Account"
            android:icon="@drawable/ic_my_account"
            android:title="My Account"
            android:visible="false" />

        <item
            android:id="@+id/your_Order"
            android:icon="@drawable/ic_cart"
            android:title="@string/your_order"
            android:visible="false" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history"
            android:title="@string/history"
            android:visible="false" />
        <item
            android:id="@+id/nav_applyForDeliveryBoy"
            android:icon="@drawable/ic_find"
            android:title="Application form" />
        <item
            android:id="@+id/nav_administration"
            android:icon="@drawable/ic_admin"
            android:title="@string/administraion" />
        <item
            android:id="@+id/add_Menu_Item"
            android:icon="@drawable/ic_menu_add"
            android:title="Add Food Item"
            android:visible="false" />
        <item
            android:id="@+id/customer_List"
            android:icon="@drawable/ic_list"
            android:title="Restaurant List"
            android:visible="false" />
        <item
            android:id="@+id/delivery_Boy_List"
            android:icon="@drawable/ic_list"
            android:title="Delivery Boy List"
            android:visible="false" />
        <item
            android:id="@+id/add_Admin"
            android:icon="@drawable/ic_add_moderator"
            android:title="Add Admin"
            android:visible="false" />

        <item
            android:id="@+id/history_Delivery_Boy"
            android:icon="@drawable/ic_history"
            android:title="Current Delivery"
            android:visible="false" />


    </group>
    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/condition"
                android:title="Terms and conditions" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/log_out"
                android:visible="false" />
        </menu>
    </item>
</menu>